--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+chrono = "0.4.31"
 dotenv = "0.15.0"
 poise = "0.5.6"
 rcon = { version = "0.6.0", features = ["rt-tokio"] }
