--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 chrono = "0.4.31"
 dotenv = "0.15.0"
 poise = "0.5.6"
+rand = "0.8.5"
 rcon = { version = "0.6.0", features = ["rt-tokio"] }
 regex = "1.9.6"
 tokio = { version = "1", features = ["full"] }
