added domination counter :)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,4 +13,5 @@ poise = "0.5.6"
 rand = "0.8.5"
 rcon = { version = "0.6.0", features = ["rt-tokio"] }
 regex = "1.9.6"
+sqlx = { version = "0.7.2", features = ["runtime-tokio", "mysql"] }
 tokio = { version = "1", features = ["full"] }
