feat: new tf2 server

--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,10 @@
-RCON_ADDR=
 RCON_PASS=
 
 BOT_TOKEN=
 GUILD_ID=
 
-LIVE_PLAYER_CHANNEL_ID=
-
 SRCDS_LOG_ADDR=0.0.0.0
 SRCDS_LOG_PORT=27001
-SRCDS_LOG_CHANNEL_ID=
 SRCDS_LOG_PASSWORD=
 
 FEEDBACK_USER=
@@ -19,3 +15,8 @@ PRIVATE_CHANNEL_ID=
 PRIVATE_WELCOME_CHANNEL_ID=
 
 DATABASE_URL=
+
+PLAYER_COUNT_CID_4=
+PLAYER_COUNT_CID_5=
+RELAY_CID_4=
+RELAY_CID_5=
