feat: merged /status and /info

--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,8 @@ PLAYER_COUNT_CID_4=
 PLAYER_COUNT_CID_5=
 RELAY_CID_4=
 RELAY_CID_5=
+
+FTP_4_USERNAME=
+FTP_4_PASSWORD=
+FTP_5_USERNAME=
+FTP_5_PASSWORD=
