--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 chrono = "0.4.31"
 dotenv = "0.15.0"
+ftp = "3.0.1"
 nom = "7.1.3"
 poise = "0.5.6"
 rand = "0.8.5"
