--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,5 +15,8 @@ rand = "0.8.5"
 # rcon = { version = "0.6.0", features = ["rt-tokio"] }
 rcon = { path = "rust-rcon", features = ["rt-tokio"] }
 regex = "1.9.6"
+reqwest = { version = "0.11.22", features = ["json"] }
+serde = {version = "1.0.193", features = ["derive"] }
+serde_json = "1.0.108"
 sqlx = { version = "0.7.2", features = ["runtime-tokio", "mysql"] }
 tokio = { version = "1", features = ["full"] }
