--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,6 @@ edition = "2021"
 chrono = "0.4.31"
 dotenv = "0.15.0"
 ftp = "3.0.1"
-nom = "7.1.3"
 poise = "0.5.6"
 rand = "0.8.5"
 # rcon = { version = "0.6.0", features = ["rt-tokio"] }
@@ -20,3 +19,4 @@ serde = {version = "1.0.193", features = ["derive"] }
 serde_json = "1.0.108"
 sqlx = { version = "0.7.2", features = ["runtime-tokio", "mysql"] }
 tokio = { version = "1", features = ["full"] }
+srcds_log_parser = { git = "https://github.com/sarahkittyy/srcds-log-parser", branch = "main" }
