feat: addition of tkgp6

--- a/.env.example
+++ b/.env.example
@@ -28,10 +28,14 @@ DATABASE_URL=
 
 PLAYER_COUNT_CID_4=
 PLAYER_COUNT_CID_5=
+PLAYER_COUNT_CID_6=
 RELAY_CID_4=
 RELAY_CID_5=
+RELAY_CID_6=
 
 FTP_4_USERNAME=
 FTP_4_PASSWORD=
 FTP_5_USERNAME=
 FTP_5_PASSWORD=
+FTP_6_USERNAME=
+FTP_6_PASSWORD=
