--- a/.env.example
+++ b/.env.example
@@ -17,12 +17,12 @@ MEDIA_COOLDOWN=
 
 SEEDER_ROLE=
 HORNY_ROLE=
+MEMBER_ROLE=
 
 GENERAL_CHANNEL_ID=
-
 DELETED_MESSAGE_LOG_CHANNEL_ID=
-
 TRIAL_MOD_CHANNEL_ID=
+BIRTHDAY_CHANNEL_ID=
 
 DATABASE_URL=
 
