--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,5 @@ serde_json = "1.0.108"
 sqlx = { version = "0.7.2", features = ["runtime-tokio", "mysql"] }
 tokio = { version = "1", features = ["full"] }
 srcds_log_parser = { git = "https://github.com/sarahkittyy/srcds-log-parser", branch = "main" }
+futures = "0.3.30"
+scraper = "0.19.0"
