feat: ban protest messages

--- a/.env.example
+++ b/.env.example
@@ -21,10 +21,12 @@ MEMBER_ROLE=
 
 GENERAL_CHANNEL_ID=
 DELETED_MESSAGE_LOG_CHANNEL_ID=
+MOD_CHANNEL_ID=
 TRIAL_MOD_CHANNEL_ID=
 BIRTHDAY_CHANNEL_ID=
 
 DATABASE_URL=
+SB_DATABASE_URL=
 
 PLAYER_COUNT_CID_4=
 PLAYER_COUNT_CID_5=
