--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,4 @@ srcds_log_parser = { git = "https://github.com/sarahkittyy/srcds-log-parser", br
 futures = "0.3.30"
 scraper = "0.19.0"
 uwuify = "0.2.2"
+emojito = "0.3.5"
