feat: /profile fetching

--- a/.env.example
+++ b/.env.example
@@ -29,6 +29,8 @@ BIRTHDAY_CHANNEL_ID=
 DATABASE_URL=
 SB_DATABASE_URL=
 
+CLASS_EMOJIS=
+
 PLAYER_COUNT_CID_4=
 PLAYER_COUNT_CID_5=
 PLAYER_COUNT_CID_6=
