feat: steam link + profile features

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,10 @@ RCON_PASS=
 BOT_TOKEN=
 GUILD_ID=
 
+HTTP_IP=127.0.0.1
+HTTP_PORT=7000
+HTTP_PUBLIC_URL=http://127.0.0.1:7000
+
 SRCDS_LOG_ADDR=0.0.0.0
 SRCDS_LOG_PORT=27001
 SRCDS_LOG_PASSWORD=
