--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,3 +27,5 @@ emojito = "0.3.5"
 tokio-cron-scheduler = "0.10.0"
 chrono-tz = "0.8.6"
 humantime = "2.1.0"
+steam-connect = { version = "1.3.0" }
+axum = { version = "0.7.5", features = ["tokio", "query", "macros"] }
