--- a/.env.example
+++ b/.env.example
@@ -26,6 +26,7 @@ SCRIM_ROLE=
 
 GENERAL_CHANNEL_ID=
 DELETED_MESSAGE_LOG_CHANNEL_ID=
+LEAVER_LOG_CHANNEL_ID=
 MOD_CHANNEL_ID=
 TRIAL_MOD_CHANNEL_ID=
 BIRTHDAY_CHANNEL_ID=
