--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,3 +29,4 @@ chrono-tz = "0.8.6"
 humantime = "2.1.0"
 steam-connect = { version = "1.3.0" }
 axum = { version = "0.7.5", features = ["tokio", "query", "macros"] }
+rand_distr = "0.4.3"
