--- a/.env.example
+++ b/.env.example
@@ -29,6 +29,7 @@ DELETED_MESSAGE_LOG_CHANNEL_ID=
 LEAVER_LOG_CHANNEL_ID=
 MOD_CHANNEL_ID=
 BIRTHDAY_CHANNEL_ID=
+STOCK_MARKET_CHANNEL_ID=
 
 DATABASE_URL=
 SB_DATABASE_URL=
