--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,8 @@ steam-connect = { version = "1.3.0" }
 axum = { version = "0.7.5", features = ["tokio", "query", "macros"] }
 rand_distr = "0.4.3"
 serde-xml-rs = "0.6.0"
+plotters = "0.3.6"
+image = { version = "0.25.1", default-features = false, features = ["png"] }
 
 [patch.crates-io]
 serenity = { git = "https://github.com/sarahkittyy/serenity.git" }
