--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,7 +31,7 @@ steam-connect = { version = "1.3.0" }
 axum = { version = "0.7.5", features = ["tokio", "query", "macros"] }
 rand_distr = "0.4.3"
 serde-xml-rs = "0.6.0"
-plotters = "0.3.6"
+plotters = { git = "https://github.com/plotters-rs/plotters", branch = "dependabot/cargo/image-0.25.1", features = ["image"] }
 image = { version = "0.25.1", default-features = false, features = ["png"] }
 
 [patch.crates-io]
