--- a/.env.example
+++ b/.env.example
@@ -30,6 +30,7 @@ LEAVER_LOG_CHANNEL_ID=
 MOD_CHANNEL_ID=
 BIRTHDAY_CHANNEL_ID=
 STOCK_MARKET_CHANNEL_ID=
+YAPAWARDS_CHANNEL_ID=
 
 DATABASE_URL=
 SB_DATABASE_URL=
