--- a/bot/Cargo.toml
+++ b/bot/Cargo.toml
@@ -14,6 +14,7 @@ sourcebans = { path = "../sourcebans" }
 seederboard = { path = "../seederboard" }
 profile = { path = "../profile" }
 stocks = { path = "../stocks" }
+yapawards = { path = "../yapawards"}
 
 chrono = "0.4.31"
 dotenv = "0.15.0"
