feat: +5 catcoin to fourth place

--- a/yapawards/Cargo.toml
+++ b/yapawards/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 common = { path = "../common" }
+catcoin = { path = "../catcoin" }
 
 chrono = "0.4.31"
 chrono-tz = "0.8.6"
