feat: post logstf links automatically

--- a/.env.example
+++ b/.env.example
@@ -31,6 +31,7 @@ MOD_CHANNEL_ID=
 BIRTHDAY_CHANNEL_ID=
 STOCK_MARKET_CHANNEL_ID=
 YAPAWARDS_CHANNEL_ID=
+LOGSTF_CHANNEL_ID=
 
 DATABASE_URL=
 SB_DATABASE_URL=
