--- a/sourcebans/Cargo.toml
+++ b/sourcebans/Cargo.toml
@@ -10,3 +10,4 @@ sqlx = { version = "0.7.2", features = ["runtime-tokio", "mysql", "chrono"] }
 tokio = { version = "1", features = ["full"] }
 poise = "0.6.1"
 rand = "0.8.5"
+log = "0.4"
