--- a/yapawards/Cargo.toml
+++ b/yapawards/Cargo.toml
@@ -13,3 +13,4 @@ poise = "0.6.1"
 sqlx = { version = "0.7.2", features = ["runtime-tokio", "mysql", "chrono"] }
 tokio = { version = "1", features = ["full"] }
 tokio-cron-scheduler = "0.10.0"
+log = "0.4"
