--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -11,3 +11,4 @@ rand = "0.8.5"
 chrono = "0.4.31"
 steam-connect = { version = "1.3.0" }
 tokio = { version = "1", features = ["full"] }
+log = "0.4"
