--- a/logstf/Cargo.toml
+++ b/logstf/Cargo.toml
@@ -13,3 +13,4 @@ serde_json = "1.0.108"
 reqwest = { version = "0.11.22", features = ["json"] }
 sqlx = { version = "0.7.2", features = ["runtime-tokio", "mysql", "chrono"] }
 tokio = { version = "1", features = ["full"] }
+log = "0.4"
