--- a/seederboard/Cargo.toml
+++ b/seederboard/Cargo.toml
@@ -10,3 +10,4 @@ common = { path = "../common" }
 srcds_log_parser = { git = "https://github.com/sarahkittyy/srcds-log-parser", branch = "main" }
 sqlx = { version = "0.7.2", features = ["runtime-tokio", "mysql", "chrono"] }
 tokio = { version = "1", features = ["full"] }
+log = "0.4"
