--- a/.env.example
+++ b/.env.example
@@ -38,6 +38,10 @@ SB_DATABASE_URL=
 
 CLASS_EMOJIS=
 CATCOIN_EMOJI=
+DEFENSE_EMOJI=
+ATTACK_EMOJI=
+CATCOIN_DEFENSE_EMOJI=
+CATCOIN_ATTACK_EMOJI=
 
 PLAYER_COUNT_CID_4=
 PLAYER_COUNT_CID_5=
