--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -15,6 +15,7 @@ jobs:
       - name: Build
         run: |
             whoami
+            cargo sqlx migrate run
             cargo build --release
 
       - name: Run
