--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -14,7 +14,7 @@ jobs:
 
       - name: Build
         run: |
-            cargo install
+            cargo install --path bot
             cargo sqlx migrate run
             cargo build --release
 
