feat: add sftp support

--- a/.env.example
+++ b/.env.example
@@ -50,9 +50,9 @@ RELAY_CID_4=
 RELAY_CID_5=
 RELAY_CID_6=
 
-FTP_4_USERNAME=
-FTP_4_PASSWORD=
-FTP_5_USERNAME=
-FTP_5_PASSWORD=
-FTP_6_USERNAME=
-FTP_6_PASSWORD=
+FTP_USER_4=
+FTP_PASS_4=
+FTP_USER_5=
+FTP_PASS_5=
+FTP_USER_6=
+FTP_PASS_6=
