one image per day

--- a/.env.example
+++ b/.env.example
@@ -24,6 +24,9 @@ HORNY_ROLE=
 MEMBER_ROLE=
 SCRIM_ROLE=
 MOD_ROLE=
+GENIMG_ROLE=
+BOOSTER_ROLE=
+SUPPAWTER_ROLE=
 
 GENERAL_CHANNEL_ID=
 DELETED_MESSAGE_LOG_CHANNEL_ID=
