--- a/bot/Cargo.toml
+++ b/bot/Cargo.toml
@@ -16,6 +16,7 @@ profile = { path = "../profile" }
 stocks = { path = "../stocks" }
 yapawards = { path = "../yapawards"}
 logstf = { path = "../logstf"}
+genimg = { path = "../genimg"}
 
 chrono = "0.4.31"
 dotenv = "0.15.0"
