migrated emoji stuff

--- a/.env.example
+++ b/.env.example
@@ -40,12 +40,7 @@ LOGSTF_CHANNEL_ID=
 DATABASE_URL=
 SB_DATABASE_URL=
 
-CLASS_EMOJIS=
-CATCOIN_EMOJI=
-DEFENSE_EMOJI=
-ATTACK_EMOJI=
-CATCOIN_DEFENSE_EMOJI=
-CATCOIN_ATTACK_EMOJI=
+EMOJI_JSON=emoji.json
 
 PLAYER_COUNT_CID_4=
 PLAYER_COUNT_CID_5=
