--- a/bot/Cargo.toml
+++ b/bot/Cargo.toml
@@ -18,6 +18,7 @@ yapawards = { path = "../yapawards" }
 logstf = { path = "../logstf" }
 genimg = { path = "../genimg" }
 emoji = { path = "../emoji" }
+cardgames = { path = "../cardgames" }
 
 chrono = "0.4.31"
 dotenv = "0.15.0"
