--- a/cardgames/Cargo.toml
+++ b/cardgames/Cargo.toml
@@ -9,6 +9,7 @@ catcoin = { path = "../catcoin" }
 emoji = { path = "../emoji" }
 
 rand = "0.8.5"
+rand_distr = "0.4.3"
 poise = "0.6.1"
 sqlx = { version = "0.7.2", features = ["runtime-tokio", "mysql", "chrono"] }
 tokio = { version = "1", features = ["full"] }
