--- a/catcoin/Cargo.toml
+++ b/catcoin/Cargo.toml
@@ -15,3 +15,4 @@ rand = "0.8.5"
 rand_distr = "0.4.3"
 regex = "1.9.6"
 log = "0.4"
+image = { version = "0.25.1", default-features = false, features = ["png"] }
